mini-example/ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
spec:
  selector:
    app: podinfo
  ports:
  - name: podinfo
    port: 3000 # Porta que o ingress irá se conectar
    targetPort: 9898 # Porta do container
