mini-example/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  podinfo
  namespace: default
  labels:
    app:  podinfo
spec:
  selector:
    matchLabels:
      app: podinfo
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  podinfo
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  podinfo-container
        image:  stefanprodan/podinfo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort:  9898
      #   resources:
      #     requests:
      #       cpu: 100m
      #       memory: 100Mi
      #     limits:
      #       cpu: 100m
      #       memory: 100Mi
      #   livenessProbe:
      #     tcpSocket:
      #       port: 80
      #     initialDelaySeconds: 5
      #     timeoutSeconds: 5
      #     successThreshold: 1
      #     failureThreshold: 3
      #     periodSeconds: 10
      #   readinessProbe:
      #     httpGet:
      #       path: /_status/healthz
      #       port: 80
      #     initialDelaySeconds: 5
      #     timeoutSeconds: 2
      #     successThreshold: 1
      #     failureThreshold: 3
      #     periodSeconds: 10
      #   env:
      #   - name: DB_HOST
      #     valueFrom:
      #       configMapKeyRef:
      #         name: podinfo
      #         key: DB_HOST
      #   ports:
      #   - containerPort:  80
      #     name:  podinfo
      #   volumeMounts:
      #   - name: localtime
      #     mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      # restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: default
spec:
  selector:
    app: podinfo
  ports:
  - name: podinfo
    port: 3000 # Porta que o ingress irá se conectar
    targetPort: 9898 # Porta do container
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
